# bob_the_resume_builder

./: .gitignore  README.md  environment.yaml  pyproject.toml
src/bob_the_resume_builder/: __init__.py  brain.py  file_conversion_helper.py  main.py
