[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bob_the_resume_builder"
version = "0.1.0"
description = "An AI-powered resume adapted that helps you adapt your resume for different job applications."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Saad Khan", email = "saadkhan7410@gmail.com" }]
dependencies = [
  "pymupdf4llm",
  "openai",
  "python-dotenv",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
]

[project.scripts]
bob-build = "bob_the_resume_builder.main:main"

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["bob_the_resume_builder"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
